Bug 910074 - Move crash reporter annotations added in bug 867530 after both SetExceptionHandler call and xpcom initialization. r=ted